# pycreditools

./: .gitignore  LICENSE  README.md  politica_producao_simplificada.json  pyproject.toml  test_script.py  tutorial_masterclass_v14.ipynb  tutorial_masterclass_v15.ipynb  tutorial_masterclass_v16.ipynb
.github/workflows/: workflow.yaml
scratch/: check_plot_data.py  evaluate_ks.py  find_noises.py  generate_notebook_v14.py  print_ranges.py  run_and_save_outputs.py  run_notebook.py  test_proposed_noises.py
src/pycreditools/: __init__.py  _parallel.py  _types.py  analysis.py  deployment.py  expressions.py  grouping.py  optimization.py  performance.py  policy.py  sample_data.py  screening.py  simulation.py  stages.py  stress.py  visualization.py
src/pycreditools/_kernels/: __init__.py  iv.py  tier_metrics.py  ward.py
src/pycreditools/examples/: __init__.py  generate_notebook_v14.py  tutorial_masterclass_v14.ipynb  tutorial_masterclass_v16.ipynb
tests/: test_bugfixes.py  test_deployment.py  test_dx.py  test_enhanced.py  test_expressions.py  test_grouping.py  test_optimization.py  test_reporting_viz.py
