[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pycreditools"
version = "0.2.6"
description = "Credit Risk Simulation and Policy Optimization — Python edition of creditools"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Matheus Pasche", email = "matheuspasche@outlook.com"},
]
keywords = [
    "credit-risk",
    "simulation",
    "policy-optimization",
    "risk-management",
    "ward-clustering",
    "information-value",
    "credit-scoring",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Office/Business :: Financial",
    "Typing :: Typed",
]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
viz = ["plotly>=5.0"]
parallel = ["joblib>=1.3"]
accel = ["numba>=0.58"]
all = [
    "plotly>=5.0",
    "joblib>=1.3",
    "numba>=0.58",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/matheuspasche/pycreditools"
Repository = "https://github.com/matheuspasche/pycreditools"
Issues = "https://github.com/matheuspasche/pycreditools/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pycreditools"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
